K8's/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers: 
      - name: backend-pod
        image: darshan616/chat-app-backend
        ports:
        - containerPort: 5001
