K8's/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  selector:
    app: frontend-deployment
  ports:
  - port: 80
    targetPort: 80
