K8's/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: chat-app
  labels:
    name: myingress
spec:
  rules:
  - host: "darshankatkam.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-deployment
            port: 
              number: 80
